@@ -39,8 +39,11 @@
 #define _NPPLAT_H_
 
 #include "npapi.h"
+#ifdef HAVE_NPFUNCTIONS
+#include "npfunctions.h"
+#else
 #include "npupp.h"
-
+#endif
 /**************************************************/
 /*                                                */
 /*                   Windows                      */
